<resources>
    <string name="app_name">Firebase Learning</string>
    <string name="don_t_have_an_account_register">Don\'t have an account ? Register</string>
    <string name="chat_app">Chat App</string>
    <string name="username">Username:</string>
    <string name="email"><font size="35">Email:</font></string>
    <string name="password">Password:</string>
    <string name="login">login</string>
</resources>